--- a/whack-a-mole/pyproject.toml
+++ b/whack-a-mole/pyproject.toml
@@ -22,4 +22,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = []
+dev = [
+    "ruff>=0.1.0",
+    "pre-commit>=3.5.0",
+]
