--- a/whack-a-mole/pyproject.toml
+++ b/whack-a-mole/pyproject.toml
@@ -26,3 +26,17 @@ dev = [
     "ruff>=0.1.0",
     "pre-commit>=3.5.0",
 ]
+
+[tool.ruff]
+line-length = 90
+
+[tool.ruff.lint]
+# Enable Pyflakes (F), pycodestyle (E, W), and Pylint (PL)
+select = ["F", "E", "W", "PL"]
+
+[tool.ruff.lint.pylint]
+max-statements = 40
+max-args = 10
+max-locals = 15
+max-branches = 12
+
